[gd_scene load_steps=4 format=3 uid="uid://bhae3akbbnkju"]

[ext_resource type="Script" path="res://Scenes/Scripts/Player, weapons and collectables/weapons/bullet5.gd" id="1_skeqg"]
[ext_resource type="Texture2D" uid="uid://choxqya4qujqg" path="res://Sprites/Characters and items/bullet_3.png" id="2_37clq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nncrg"]
size = Vector2(8, 3.55556)

[node name="bullet" type="Area2D"]
scale = Vector2(4.5, 4.5)
collision_mask = 6
script = ExtResource("1_skeqg")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0, 4.76837e-07)
scale = Vector2(0.377778, 0.177778)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_nncrg")

[node name="Bullet3" type="Sprite2D" parent="."]
rotation = 1.5708
texture = ExtResource("2_37clq")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
